[package]
name = "is-root"
description = "A simple library to detect whether you are root/admin or not"
version = "0.1.0"
authors = ["John Meow <j0hn.meow@ya.ru>"]
edition = "2018"
readme = "README.md"
license-file = "LICENSE"
repository = "https://gitlab.com/johnmeow/is-root"
keywords = ["sudo", "admin", "root", "system"]
categories = ["os", "os::windows-apis", "os::unix-apis"]

[target.'cfg(unix)'.dependencies]
users = "0.10"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
default-features = false
features = ["minwindef", "handleapi", "processthreadsapi", "securitybaseapi"]
