[package]
name = "is-root"
description = "A simple library to detect whether you are root/admin or not"
version = "0.1.4"
authors = ["Alice Carroll <crates@alice-carroll.pet>"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://gitlab.com/caralice/is-root"
keywords = ["sudo", "admin", "root", "system"]
categories = ["os", "os::windows-apis", "os::unix-apis"]

[target.'cfg(unix)'.dependencies.libc]
version = "0.2"
default-features = false

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
default-features = false
features = ["minwindef", "handleapi", "processthreadsapi", "securitybaseapi"]

[badges]
  [badges.gitlab]
  repository = "caralice/is-root"

  [badges.maintenance]
  status = "as-is"

  [badges.codecov]
  repository = "caralice/is-root"
  service = "gitlab"

  [badges.coveralls]
  repository = "caralice/is-root"
  service = "gitlab"
